5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4466/executions/1577_1328.log
== SUBMITION (2019-03-26 19:03:12) 
-- CODE:
pint( 35 )
-- EXECUTION TIME:
0.225745
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1328/main.py", line 1, in <module>
    pint( 35 )
NameError: name 'pint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:36) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.205684
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:40) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.21726
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:40) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.16637
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:40) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.128854
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1328/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:40) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.118821
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:40) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.114909
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:40) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.124765
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:41) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.250074
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:41) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.122262
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:41) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.11127
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:43) 
-- CODE:
print( 35 )
-- EXECUTION TIME:
0.20121
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:03:53) 
-- CODE:
print( 700 )
-- EXECUTION TIME:
0.138199
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
